@@ -8,7 +8,7 @@ import st.redline.ThisContext;
 public class CategoryMethod extends ProtoMethod {
 	public ProtoObject applyTo(ProtoObject receiver, ThisContext thisContext, ProtoObject argument) {
 //		System.out.println("CategoryMethod() " + receiver + " " + String.valueOf(argument.javaValue()));
-//		receiver.category(String.valueOf(argument.javaValue()));
+		receiver.category(String.valueOf(argument.javaValue()));
 		return receiver;
 	}
 }
